--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.15.4",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.3.0",
