--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/bull": "^3.12.0",
+    "@types/bull-board": "^0.6.0",
     "ts-node": "3.3.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
@@ -31,6 +33,8 @@
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
+    "bull": "^3.12.1",
+    "bull-board": "^0.6.0",
     "class-validator": "^0.11.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
