--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    // "sourceMap": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./node_modules/@types", "./@configs/customTypings"]
   }
