--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "typeorm": "0.2.22",
     "uuid": "^3.4.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   },
   "scripts": {
     "build": "tsc",
