--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "devDependencies": {
     "@types/bull": "^3.12.0",
     "@types/bull-board": "^0.6.0",
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^7.0.1",
+    "@types/supertest": "^2.0.8",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
+    "supertest": "^4.0.2",
     "ts-node": "3.3.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
@@ -56,6 +62,8 @@
     "build": "tsc",
     "start": "set debug=* && ts-node-dev --debug --respawn --transpileOnly --ignore-watch node_modules ./src/@server.ts",
     "prod": "tsc && pm2 start ./build/src/@server.js",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "migration:run": "npm run typeorm migration:run -- -t each",
+    "test": "mocha --exit -r ts-node/register 'src/@tests/**/*.test.ts'"
   }
 }
