--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
+    "@types/connect-busboy": "0.0.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/fluent-ffmpeg": "^2.1.14",
     "@types/helmet": "0.0.45",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^8.10.59",
+    "@types/sequelize": "^4.28.8",
     "@types/uuid": "^3.4.7",
     "@types/winston": "^2.4.4",
     "app-root-path": "^3.0.0",
@@ -43,17 +46,21 @@
     "bull-board": "^0.6.0",
     "class-validator": "^0.11.0",
     "compression": "^1.7.4",
+    "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.15.4",
     "express-async-errors": "^3.1.1",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
+    "node-media-server": "^2.1.4",
     "pg": "^7.3.0",
     "pm2": "^4.2.3",
     "reflect-metadata": "^0.1.10",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typeorm": "0.2.22",
     "uuid": "^3.4.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
