--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^8.10.59",
     "@types/sequelize": "^4.28.8",
+    "@types/socket.io": "^2.1.4",
     "@types/uuid": "^3.4.7",
     "@types/winston": "^2.4.4",
     "app-root-path": "^3.0.0",
@@ -60,6 +61,7 @@
     "reflect-metadata": "^0.1.10",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "uuid": "^3.4.0",
     "winston": "^3.2.1",
