--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "jsonwebtoken": "^8.5.1",
     "node-media-server": "^2.1.4",
     "pg": "^7.3.0",
+    "pg-hstore": "^2.3.3",
     "pm2": "^4.2.3",
     "reflect-metadata": "^0.1.10",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.3.0",
     "ts-node-dev": "^1.0.0-pre.44",
+    "typeorm": "^0.2.22",
     "uuid": "^3.4.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
