--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "12.12.0"
   },
   "private": true,
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "@types/bull": "^3.12.0",
     "@types/bull-board": "^0.6.0",
     "@types/chai": "^4.2.8",
@@ -20,9 +21,7 @@
     "ts-node": "3.3.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.3.3333"
-  },
-  "dependencies": {
+    "typescript": "3.3.3333",
     "@sentry/node": "^5.11.2",
     "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "^2.4.2",
