--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": "12.12.0"
   },
   "private": true,
-  "devDependencies": {},
-  "dependencies": {
+  "devDependencies": {
     "@types/bull": "^3.12.0",
     "@types/bull-board": "^0.6.0",
     "@types/chai": "^4.2.8",
@@ -21,7 +20,9 @@
     "ts-node": "3.3.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.3.3333",
+    "typescript": "3.3.3333"
+  },
+  "dependencies": {
     "@sentry/node": "^5.11.2",
     "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "^2.4.2",
@@ -71,7 +72,7 @@
   "scripts": {
     "build": "tsc",
     "start": "set debug=* && ts-node-dev --debug --respawn --transpileOnly --ignore-watch node_modules ./src/@server.ts",
-    "prod": "tsc && pm2 start ./build/src/@server.js",
+    "prod": "node ./build/@server.js",
     "test": "mocha --exit -r ts-node/register 'src/@tests/**/*.test.ts'"
   }
 }
